# auto-feedback-system

./: .gitignore  Dockerfile  PROMPT.md  README.md  api.py  docker-compose.yml  former.py  gpt_result.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
docs/: ai-usage-log.md  ralph-log.md
src/: api.py  main.py  stats.py
